# OverEngine

./: .gitignore  .gitmodules  BackupDetails.txt  CMakeLists.txt  FontFormatter_premake5.lua  GenerateProjectFiles.bat  GenerateProjectFiles_Scons.bat  LICENSE  OverDocs_premake5.lua  OverEditor.lua  OverEditorExec.lua  OverEditorExec_premake5.lua  OverEditorLib.lua  OverEditor_premake5.lua  OverEngine.lua  OverEngine.sln  OverEngineLib.lua  OverEngine_premake5.lua  OverPlayerExec.lua  OverPlayerExec_premake5.lua  OverSandbox.lua  README.md  SConstruct  Todo.md  build.py  build.sh  index.html  main.scons  premake5.lua  run-editor.sh  run-sandbox.sh  tools.py
OverEditor/: CMakeLists.txt  Layout.yaml  OverEditor.vcxproj  README.md  imgui.ini  premake5.lua
OverEditor/assets/: assets.oea  project.oep
OverEditor/assets/scenes/: Scene.oes
OverEditor/assets/shaders/: BatchRenderer2D.glsl  BatchRenderer2D.glsl.oea  FlatColor.glsl  VertexColor.glsl  ViewportGizmos.glsl  ViewportGrid2D.glsl
OverEditor/assets/textures/: CheckerBoard.png.oea
OverEditor/res/: overeditor_res.rc
OverEditor/src/: Action.cpp  Action.h  ComponentEditor.h  Editor.cpp  Editor.h  EditorApp.cpp  EditorConsoleSink.h  EditorLayer.cpp  EditorLayer.h  EditorProject.cpp  EditorProject.h  SceneEditor.h  SceneLoader.cpp  SceneLoader.h  SceneLoaderAndSaver.cpp  SceneLoaderAndSaver.h  UIElements.cpp  UIElements.h  ViewportPanel.cpp  ViewportPanel.h
OverEditor/src/Behavior/: AssetManager.cpp  AssetManager.h  EditorProject.cpp  EditorProject.h  SceneEditor.h
OverEditor/src/GUI/: OnEditorGUI.cpp  OnEditorGUI.h
OverEditor/src/Panels/: AssetsPanel.cpp  AssetsPanel.h  ConsolePanel.cpp  ConsolePanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
OverEditor/src/UI/: ComponentEditor.h  EditorConsoleSink.h  UIElements.cpp  UIElements.h
OverEditor/src/UI/Panels/: AssetsPanel.cpp  AssetsPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
OverEngine/: CMakeLists.txt  OverEngine.vcxproj  OverEngine.vcxproj.filters  README.md  premake5.lua
OverEngine/res/fonts/: Roboto.h
OverEngine/resources/fonts/: Roboto.h
OverEngine/src/: OverEngine.h  pcheader.cpp  pcheader.h
OverEngine/src/OverEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Window.h
OverEngine/src/OverEngine/Assets/: Asset.cpp  Asset.h  AssetCollection.cpp  AssetCollection.h  AssetManager.cpp  AssetManager.h  AssetResource.cpp  AssetResource.h  FolderAsset.cpp  FolderAsset.h  Resource.cpp  Resource.h  SceneAsset.cpp  SceneAsset.h  Texture2DAsset.cpp  Texture2DAsset.h
OverEngine/src/OverEngine/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Extensions.h  Extentions.h  GUIDGenerator.cpp  GUIDGenerator.h  Init.cpp  Init.h  Log.cpp  Log.h  Object.cpp  Object.h  Random.cpp  Random.h  String.cpp  String.h  Variant.cpp  Variant.h  Window.h
OverEngine/src/OverEngine/DataStructs/: Vector2.cpp  Vector2.h
OverEngine/src/OverEngine/Debug/: Instrumentor.h
OverEngine/src/OverEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
OverEngine/src/OverEngine/ImGui/: Action.cpp  Action.h  DockingLayout.cpp  DockingLayout.h  ExtraImGui.cpp  ExtraImGui.h  ImGuiBinding.cpp  ImGuiBinding.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiPanel.h  UIElements.cpp  UIElements.h
OverEngine/src/OverEngine/Input/: Input.cpp  Input.h  InputSystem.cpp  InputSystem.h  KeyCodes.h
OverEngine/src/OverEngine/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
OverEngine/src/OverEngine/Physics/: Collider2D.cpp  Collider2D.h  Collision2D.h  PhysicWorld2D.cpp  PhysicWorld2D.h  PhysicsBody2D.cpp  PhysicsBody2D.h  PhysicsCollider2D.cpp  PhysicsCollider2D.h  PhysicsMaterial2D.h  PhysicsShape2D.cpp  PhysicsShape2D.h  PhysicsWorld2D.cpp  PhysicsWorld2D.h  RigidBody2D.cpp  RigidBody2D.h
OverEngine/src/OverEngine/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  ClearFlags.h  FrameBuffer.cpp  FrameBuffer.h  GPUTexture.cpp  GPUTexture.h  GraphicsContext.cpp  GraphicsContext.h  ParticleSystem2D.cpp  ParticleSystem2D.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererContext.cpp  RendererContext.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureEnums.h  TextureManager.cpp  TextureManager.h  VertexArray.cpp  VertexArray.h
OverEngine/src/OverEngine/Scene/: ComponentSerializer.h  Components.cpp  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneCollision2D.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h  TransformComponent.cpp  TransformComponent.h
OverEngine/src/OverEngine/Scripting/: LuaScriptingEngine.h  Script.h  ScriptingEngine.cpp  ScriptingEngine.h  Wren++Build.cpp  Wren.cpp  Wren.h  WrenBindings.cpp
OverEngine/src/Platform/Linux/: LinuxImGuiImplBuild.cpp  LinuxInput.cpp  LinuxInput.h  LinuxTime.cpp  LinuxTime.h  LinuxWindow.cpp  LinuxWindow.h
OverEngine/src/Platform/OpenGL/: ImGuiOpenGLImplBuild.cpp  ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h  OpenGLBuffer.cpp  (+16 more)
OverEngine/src/Wren/: components.wren  entity.wren  imgui.wren  input.wren  keycodes.wren  lib.wren  math.wren  scheduler.wren  script.wren  time.wren
Sandbox/: CMakeLists.txt  OverEngineProfile-Runtime.json  OverEngineProfile-Shutdown.json  OverEngineProfile-StartUp.json  README.md  imgui.ini  premake5.lua
Sandbox/assets/scripts/: player.lua
Sandbox/assets/shaders/: BatchRenderer2D.glsl  FlatColor.glsl  Texture.glsl  TextureShader.glsl  VertexColor.glsl
Sandbox/res/: overplayer_res.aps  overplayer_res.rc  sandbox_res.rc
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp  SandboxLayer.cpp  SandboxLayer.h
Sandbox/src/NeuralNetwork/: NeuralNetwork.cpp  NeuralNetwork.h
Sandbox/src/Sandbox2D/: Sandbox2D.cpp  Sandbox2D.h
Sandbox/src/SandboxECS/: SandboxECS.cpp  SandboxECS.h
Sandbox/src/SandboxLayer/: SandboxLayer.cpp  SandboxLayer.h
Sandbox/src/StringSim/: StringSim.cpp  StringSim.h
Sandbox/src/wren/: scripts.wren
(+126 files in other folders)
